@@ -6,9 +6,11 @@ DIST gitlab-pages-0.4.0.tar.bz2 205924 SHA256 b26a00050d3558e793c070cda2fe50dc1b
 DIST gitlab-pages-0.4.1.tar.bz2 206039 SHA256 ed856e1d549597b5f1b7aa5d006538aa4def240206b4756728aaeeefa49734c7 SHA512 e6dc7c73ec0601ebe53c54aa8d0978954c24450e488776bef1bb2483efd2db14d23188ee10660f6833f44bbbb50f462f8b9568a77cd4ff970300c604856319a0 WHIRLPOOL c8abfaf677f935b752be24c7ce703c49dcc23061a24f2137ea18df33a96d42233e7e00de120a812df58b84bf3db0739e97a1e37fc04367d370ef2558986d73fa
 DIST gitlab-pages-0.4.2.tar.bz2 209079 SHA256 391301c4f5cc288ed1a6a451e5273899518b83529c787c0a5f724161005ca786 SHA512 74e4cd810712d1506b927f75b63dc4fca09802097579d456cfada94f06c59b05f5e11309dc6fbd0f4c701243933688afa89ef8c1cf921f15536f505c7dec99f4 WHIRLPOOL 0f352db3977565b7c41609dcbed9161fcc99398fc56aa535255a69d12169b75b985410964a9adce60ed9eb8b88a68128dac9a9528f85ec62bae468fb8907e182
 DIST gitlab-pages-0.4.3.tar.bz2 209161 SHA256 d79fd61ac54945596e708ee5b38b35d8cf2ab07f53525af6cec3192e59d7ac98 SHA512 cb1902661f8eba65e8f330d7a57c57fec565db9b046d34af66909920d4f772a418b331f74038a506780d9a4ae6bb2158bbdba684a26020b253bf709b996bbeda WHIRLPOOL 5f0f60ea22071ac740745c60db62041e0ee75a5c68385b2ff5b24ed266fbcaf9a89481b456768159d551525d52b31b25469b9f7c023409b5a2ce05d7026cb327
+DIST gitlab-pages-0.5.0.tar.bz2 224094 SHA256 b6fe0baec3f1cf7c3dbdce1aa8d732a1510a9d45ffab1b5946c397a95acb8ece SHA512 8f8b4006e44c87f79addc3b87c392e596d286d3d96eb2aa50f0e2a90e3a4e0e5fc2258fdb7c623e743323c88b22e61df9c06015fbc384a8d75369fc9bb64b98d WHIRLPOOL c6d10c0c6dc674d931536daaac35953c792c6e47d9b92033e6c29d2dcbb82e7ad6345b519207ccd6fddbf061b0f0800c8908915854e028302a8357cd45cefb2f
 EBUILD gitlab-pages-0.4.0.ebuild 1944 SHA256 9ea918e126d4edc0fb785eae43f618a7744bd0fb4bd342f09725633b3cbd9f3d SHA512 7b7364e999fbabe7ef48da010ed6b799c9b4af8ee83f32d4b138cc6ac16acdcd5ed980bf217ff405c03a9ef9bf589ce95c3cad64a101d8b0f6eb0d869e0ef014 WHIRLPOOL 2ce6e870eaaf8b7522c1ec7bbf91a843a94a278de77d44bbbe4d74f8ff36aa56dd912eae2e520bac82550a4352c5366098749d7cf1893e5e50be6b708ad1aaa3
 EBUILD gitlab-pages-0.4.1.ebuild 1944 SHA256 f489ea11f220c84e099cff1ce0e960c02498846e90e22de23a3126d4cc9e883d SHA512 18391744f540507bbaee676854ca6b264eb08dcc93fe0a0c6f3bdcc34f3ee505ecb4db7f45f98a7ac2efa722f42f0aab3f174024f5c6a6f7e206fa0e08b6ebee WHIRLPOOL 182e67c00c30485fcb69d1061c397e16e18bfa62a82d729647fd795b36a5ae486a93c5d28f86ceed1b7230f3807732b241bf37532ccae0f789e90fa89ecbfc53
 EBUILD gitlab-pages-0.4.2-r1.ebuild 1434 SHA256 477a4be7f099ed542dc7f69b2008c08d00593225e63a7c652139b4ff1e1feb46 SHA512 88923ff7da8bbb21eca3044bfaf8a59dd9a6fedc96bbeb1739a591ba2054ff1e0d789aeee7b634a70eb1627cfe3ad50361577555ccc5fedb1523e6af3518a4af WHIRLPOOL d94e14712020c5542a5b41c8450a80824fc42d585859a9527812ecb53a452101977f973badce04e2fdb239d87ad465d4ca81a848dbfde67044031b6df0f4a039
 EBUILD gitlab-pages-0.4.3.ebuild 1436 SHA256 5ac00230fb3166541549c0f75cc6cceefba1dc4cdbad00151902f7f5e4d70d94 SHA512 1b764061cdf5c52ad7681e92c330b91a99eee44128fc56c43bdbce291546ee9796ddb2b14ee9deb2dc61c80c4192223cb67c36c2b70833db05ff241d007b870c WHIRLPOOL 168f97a975a81a8413b92a7bd1c8d7420a3f45571ec668600468b43a375e4ea27ef6b95b0d6c5ff7475657920605c990ba6b2012c6c762f868156d6be4163aa5
-MISC ChangeLog 1498 SHA256 6973ee175bbb3fd2381bd56aca744eaba0ef74ff895f8486fac0b23a73aa5a9d SHA512 b89e35a418dbc127861db42b3799cd5f82b4e5f6d9e20dac3d58ac307706330c9f77b0a0d60e3eb666ccf181d796dd99f65a5dcd37b0d35e90ec791f130078c9 WHIRLPOOL d1a620bd69ee6b46f87753913b10c6c19804e8507100f7963162ed9fc013a99377bf34988764ea2ce99318bdd6f5a9c34130b0280948cfe393165286572d6dc3
+EBUILD gitlab-pages-0.5.0.ebuild 1436 SHA256 b4aabfef9811f4e591dcd71bbd7d7a399c10233be162c0cf5f903effb1ef0f98 SHA512 cc076544c219b497e39e080e469ce2b39ab4b1bcb8a396be9655af963ea35271548bd4446c1435690cfb459f510901ba1db8dd1d0574a4567b3248fc2e03a582 WHIRLPOOL cd087bc65f0eebedefea46f10c176f0163b77b12b71c89f738f94d223f1db2811fc813b49285fc35719c8430ad4ebe0d6362cdc38f2ac13e9cca7133e080b78f
+MISC ChangeLog 1676 SHA256 68dcc3076e265189ef365cf68cad85798ca511837a3406e88316b6c84527d5e7 SHA512 eb74f46967d769babbad112b2f2aeff8444a8a763b3d6e5f19d68f0fbe5b367a54e4096057e3ad29bf0e427f2818b8d61a1d2b2d3debf7b39926f6b4d5d6b59d WHIRLPOOL a5c69df06800b69c8a56c59f8fba9d877e43e5f14b6ed120f4a9b40fb91153e865ad9b6b7cfd8b9433fe0ca5e1309d675d213664a5fed3b1d2293591b7943fe2
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
